# Books_portal

./: README.md  docker-compose.yml
backend/: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  database.py  db_inspector.py  docker-compose.yml  main.py  pyproject.toml
backend/app/: README.md  auth.py  debug_enum.py  dependencies.py  fix_imports.py  main.py
backend/app/api/: README.md
backend/app/api/endpoints/: books.py
backend/app/api/v1/: recommendations.py
backend/app/bot/: api.py  bot.py  handlers.py  keyboards.py  middlewares.py  run_bot.py  states.py
backend/app/core/: README.md  __init__.py  auth.py  database.py  dependencies.py  exceptions.py  logger_config.py  middleware.py  redis.py
backend/app/db/: README.md  database.py
backend/app/docs/: __init__.py  recommendations.md  search.md
backend/app/models/: README.md  __init__.py  author.py  base.py  book.py  category.py  rating.py  relationships.py  tag.py  user.py
backend/app/repositories/: author_repository.py  user.py
backend/app/routers/: README.md  auth.py  authors.py  books.py  categories.py  dependencies.py  favorites.py  likes.py  main.py  ratings.py  recommendations.py  search.py  tags.py  user.py  users.py
backend/app/routes/: __init__.py  auth.py  book.py  books.py  category.py  interactions.py  recommendations.py  tag.py  user.py
backend/app/schemas/: README.md  __init__.py  author.py  book.py  category.py  interactions.py  recommendations.py  tag.py  user.py
backend/app/scripts/: seed_database.py
backend/app/scripts/data/: seed_data.json
backend/app/services/: README.md  __init__.py  authors.py  book.py  book_service.py  book_servise.py  books.py  categories.py  interactions.py  recommendation.py  recommendations.py  tags.py  user.py  user_service.py  user_servise.py
backend/app/tests/: .coverage  README.md  TESTING.md  __init__.py  conftest.py  create_test_moderator.py  create_test_user.py  create_user.py  direct_register.py  list_users.py  path_setup.py  pyproject.toml  swagger_client.py  test_auth.py  test_book_auth.py  test_jwt_auth.py  test_jwt_client.py  test_login.py  test_runner.py  token_extractor.py  token_tester.py
backend/app/tests/integration/: test_api.py
backend/app/tests/load/: locustfile.py
backend/app/tests/security/: test_security.py  test_sql_injection.py
backend/app/tests/unit/: test_auth.py  test_books.py  test_models.py
backend/app/utils/: README.md  __init__.py  init_db.py  json_serializer.py
backend/backend/: main.py
backend/backend/core/: config.py  database.py
backend/backend/migrations/: env.py
backend/backend/migrations/versions/: 47b92dd9ed8e_initial_migration.py  47f39d8e50fd_fix_tag_and_category.py  82f126878725_fix_relationship.py  9c0bc03efaff_fix_relationship.py  ebd08047eaa6_fix_relationship.py
backend/backend/models/: base.py  book.py
backend/backend/routers/: books.py
backend/backend/schemas/: book.py
backend/backend/utils/: init_db.py
backend/bot/: bot.py
backend/core/: config.py
backend/models/: book.py  users.py
backend/routers/endpoints/: books.py
backend/tests/: README.md  __init__.py  conftest.py  locustfile.py  test_api.py  test_models.py  test_security.py  utils.py
backend/utils/: init_db.py
core/: auth.py  config.py
doks/: UserStory.md  План разработки .md  Сравнение аналогов.md  Структура БД.md
doks/diagrams/: 10_Диаграмма последовательности.puml  11_Диаграмма классов_models.puml  11_Диаграмма классов_schemas.puml  12_Диаграмма состояний и переходов.puml  13_Диаграмма компонентов.puml  14_Диаграмма развертывания.puml  1_Организационная структура.puml  2_Карта процессов.puml  3_Business Process Model and Notation.puml  4_Диаграмма EPC.puml  5_Карта систем.puml  6_ИТ-инфраструктура.puml  7_Диаграмма DFD.puml  8_Диаграмма вариантов использования.puml  9_Диаграмма деятельности.puml
frontend/: Dockerfile  README.md  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  AppRoutes.tsx  index.tsx
frontend/src/components/: Accordion.tsx  AdminRoute.tsx  AuthRequired.tsx  AuthorCard.tsx  Avatar.tsx  BookCard.tsx  BookDetail.tsx  BookList.tsx  Button.tsx  Card.tsx  CategoryCard.tsx  Comment.tsx  Dropdown.tsx  EmptyState.tsx  ErrorMessage.tsx  FavoriteButton.tsx  Filter.tsx  Footer.tsx  Form.tsx  Header.tsx  LikeButton.tsx  LoadingSpinner.tsx  Modal.tsx  Navbar.tsx  Notification.tsx  Pagination.tsx  PrivateRoute.tsx  ProtectedRoute.tsx  Rating.tsx  SearchBar.tsx  Sort.tsx  Spinner.tsx  Table.tsx  Tabs.tsx  TagCard.tsx  Toast.tsx  UserCard.tsx
frontend/src/contexts/: AnimationContext.tsx  ApiContext.tsx  AuthContext.tsx  CacheContext.tsx  ErrorContext.tsx  FilterContext.tsx  FormContext.tsx  GamepadContext.tsx  GeolocationContext.tsx  HistoryContext.tsx  KeyboardContext.tsx  LanguageContext.tsx  ModalContext.tsx  MouseContext.tsx  NavigationContext.tsx  NotificationContext.tsx  PaginationContext.tsx  (+10 more)
src/services/: api.ts
(+45 files in other folders)
