[project]
name = "books-portal"
version = "0.1.0"
description = ""
authors = [
    {name = "koshveptos",email = "vas.cazakov@yandex.ru"}
]
license = {text = "MIT"}
#readme = "README.md"
requires-python = "3.13"
dependencies = [
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "sqlalchemy[standart] (>=2.0.39,<3.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "asyncio[all] (>=3.4.3,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
fastapi = "^0.115.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
