[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "koshveptos",email = "vas.cazakov@yandex.ru"}
]
license = {text = "MIT"}
#readme = "README.md"

requires-python = "^3.12.0"
dependencies = [
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "sqlalchemy[standart] (>=2.0.39,<3.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "asyncio[all] (>=3.4.3,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic[all] (>=1.15.2,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "detect-secrets (>=1.5.0,<2.0.0)"
]

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
fastapi = "^0.115.11"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
